deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-hw1
  labels:
    app: hw1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw1
  template:
    metadata:
      labels:
        name: pod-hw1
        app: hw1
    spec:
      containers:
        - name: docker-hw1
          image: "34234247632/otus-msa-hw1:1.0"
          livenessProbe:
            httpGet:
              path: /probe/live
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /probe/ready
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
