deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-hw1
  labels:
    app: hw1
spec:
  selector:
    app: hw1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
